2009-07-16  John W. Eaton  <jwe@octave.org>

	* graphics.cc (get_array_limits): Require min_pos value to be
	greater than zero.

2009-07-15  Robert T. Short  <octave@phaselockedsystems.com>

	* DLD-FUNCTIONS/filter.cc: New tests.

2009-07-09  John W. Eaton  <jwe@octave.org>

	* data.cc (Fones, Fzeros, Ftrue, Ffalse): Update docstrings.

2009-07-08  John W. Eaton  <jwe@octave.org>

	* graphics.cc (convert_cdata): Return NaN for NaN values in cdata.

	* pt-assign.cc (maybe_warn_former_built_in_variable): Improve message.

2009-07-04  Jaroslav Hajek  <highegg@gmail.com>

	* pt-eval.cc (do_unwind_protect_cleanup_code): Add missing
	unwind_protect::run.

2009-07-02  Jaroslav Hajek  <highegg@gmail.com>

	* help.cc (do_which): Also look for files.

2009-07-02  Jaroslav Hajek  <highegg@gmail.com>

	* Cell.cc (Cell::index): Use proper resize_fill_value.

2009-07-01  Jaroslav Hajek  <highegg@gmail.com>

	* symtab.h (symbol_table::get_fcn_info): New private static method.
	(symbol_record_rep::finfo): New field.
	* symtab.cc (symbol_record::find): Use cached finfo if possible,
	cache on successful queries.

2008-07-01  David Bateman  <dbateman@free.fr>
	
	* pr-output.cc (static inline std::string rational_approx (double, 
	int)): Test for underflow of fractional part of rational approximation
	earlier in the loop.

2009-07-01  Joe Rothweiler <octaveuser@sensicomm.com>

	* input.cc (raw_mode): Use TCSADRAIN if no wait.

2009-06-30  Jaroslav Hajek  <highegg@gmail.com>

	* symtab.h (force_variable): Remove assertion.

2009-06-28  Michael Goffioul  <michael.goffioul@gmail.com>

	* Makefile.in (INCLUDES): Install txt-eng.h and txt-eng-ft.h.
	* gl-render.cc (opengl_renderer::draw_text): Fix bitmap offset
	computation for 90x rotated text.
	* txt-eng-ft.cc (ft_render::render): Compute bitmap pixels correctly
	for 90x rotated text.

	* gl-render.cc (opengl_renderer::draw(text::properties)): Don't do
	anything if the bitmap data is empty. Issue a warning instead of